src/logs/error/2024-03-26.log
2024-03-26 11:27:39 error: Error: Authentication Failed,    at authenticationError (G:\Programming\projects\FullStack\MERN Blog\server\src\utils\error.js:9:17),    at exports.isAuthenticated (G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\authMiddleware.js:40:17),    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:144:13),    at Route.dispatch (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:114:3),    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:284:15,    at Function.process_params (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:346:12),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:280:10),    at Function.handle (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:175:3)
2024-03-26 11:28:12 error: Error: Authentication Failed,    at authenticationError (G:\Programming\projects\FullStack\MERN Blog\server\src\utils\error.js:9:17),    at exports.isAuthenticated (G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\authMiddleware.js:40:17),    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:144:13),    at Route.dispatch (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:114:3),    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:284:15,    at Function.process_params (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:346:12),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:280:10),    at Function.handle (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:175:3)
2024-03-26 22:22:00 error: ReferenceError: UserRepository is not defined,    at UserService.findById (G:\Programming\projects\FullStack\MERN Blog\server\src\service\UserService.js:8:19),    at G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\user.js:5:37,    at G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\catchAsyncErrors.js:7:19,    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:144:13),    at exports.isAuthenticated (G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\authMiddleware.js:38:5),    at processTicksAndRejections (node:internal/process/task_queues:96:5)
2024-03-26 22:25:19 error: uncaughtException: Unexpected token '}'
G:\Programming\projects\FullStack\MERN Blog\server\src\service\UserService.js:48
    }
    ^

SyntaxError: Unexpected token '}'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1126:15)
    at Module._compile (node:internal/modules/cjs/loader:1162:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1252:10)
    at Module.load (node:internal/modules/cjs/loader:1076:32)
    at Function.Module._load (node:internal/modules/cjs/loader:911:12)
    at Module.require (node:internal/modules/cjs/loader:1100:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\user.js:1:21)
    at Module._compile (node:internal/modules/cjs/loader:1198:14)
2024-03-26 23:13:33 error: ReferenceError: UserRepository is not defined,    at UserService.findById (G:\Programming\projects\FullStack\MERN Blog\server\src\service\UserService.js:9:19),    at G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\user.js:5:37,    at G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\catchAsyncErrors.js:7:19,    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:144:13),    at exports.isAuthenticated (G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\authMiddleware.js:38:5),    at runMicrotasks (<anonymous>),    at processTicksAndRejections (node:internal/process/task_queues:96:5)
